--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 <center>  
   <div class="root">
-  <button id="wwww" onclick="audio.play()">Play</button>
-  <button  id="www" onclick="audi.play()">Play</button>
+  <button id="wwww" onclick="audio.play1()">Play</button>
+  <button  id="www" onclick="audi.play(2)">Play</button>
 </div></center>  
 </body>
 <script src="app.js"></script>
